✨ feat(seo): add HTML and social meta tags
for creating social previews without being needed explain the project everytime I share it

--- a/index.html
+++ b/index.html
@@ -5,7 +5,47 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
-    <title>NeuroCodex</title>
+
+    <!-- HTML Meta Tags -->
+    <title>NeuroCodex - O parceiro de saúde mental do programador 🧠</title>
+    <meta
+      name="description"
+      content="🧠 Um guia prático com técnicas baseadas em neurociência para otimizar sua produtividade, aprendizado e bem-estar como desenvolvedor(a) de software."
+    />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://allbertuu.github.io/neurocodex" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="NeuroCodex - O parceiro de saúde mental do programador 🧠"
+    />
+    <meta
+      property="og:description"
+      content="🧠 Um guia prático com técnicas baseadas em neurociência para otimizar sua produtividade, aprendizado e bem-estar como desenvolvedor(a) de software."
+    />
+    <meta
+      property="og:image"
+      content="https://raw.githubusercontent.com/allbertuu/neurocodex/refs/heads/main/social-preview-image.png"
+    />
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="allbertuu.github.io" />
+    <meta
+      property="twitter:url"
+      content="https://allbertuu.github.io/neurocodex"
+    />
+    <meta
+      name="twitter:title"
+      content="NeuroCodex - O parceiro de saúde mental do programador 🧠"
+    />
+    <meta
+      name="twitter:description"
+      content="🧠 Um guia prático com técnicas baseadas em neurociência para otimizar sua produtividade, aprendizado e bem-estar como desenvolvedor(a) de software."
+    />
+    <meta
+      name="twitter:image"
+      content="https://raw.githubusercontent.com/allbertuu/neurocodex/refs/heads/main/social-preview-image.png"
+    />
   </head>
 
   <body>
