✨ feat: card pagination

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
 
     <main>
       <section class="cards-container"></section>
+      <nav class="pagination-container"></nav>
     </main>
 
     <footer>
